docs: add style.css and foto.jpg

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
       <article class= "conteiner">
         <h1>Susova Ekaterina</h1>
+        <div class="image"><img src="foto.jpg"></div>
         <h2>Contact info</h2>
         <ul>
         	<li><strong>Email:</strong> susova.e.a@gmail.com</li>
