--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <article class= "conteiner">
         <h1>Susova Ekaterina</h1>
-        <div class="image"><img src="foto.jpg"></div>
+        <div class="image"><img src="foto.jpg" width="300"  alt="foto"></div>
         <h2>Contact info</h2>
         <ul>
         	<li><strong>Email:</strong> susova.e.a@gmail.com</li>
